@@ -1,3 +1,9 @@
+2007-11-07  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plparse/totem-pl-parser-lines.c: (totem_pl_parser_add_m3u):
+	Add support for parsing M3U files with drive letters, as used on
+	some devices like the Sony Ericsson W950i (See #427975)
+
 2007-11-06  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plparse/totem-pl-parser-podcast.c: (parse_rss_items),
